# finnlang

./: README.md  index.html
assets/: index-C9Vs0KDk.js  index-DmdYPCHd.css
backend/: .gitignore  BACKEND_README.md  Cargo.toml  Dockerfile  Dockerfile.backup  example.finn  fizzbuzz.finn
backend/src/: ast.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
backend/test_files/: TESTS.md
backend/test_files/arrays/: basic.finn  loops.finn
backend/test_files/basic/: arithmetic.finn  assignment.finn  comments.finn  variables.finn  woof.finn
backend/test_files/complex/: calculator.finn  classic_problems.finn  guessing_game.finn  prime_numbers.finn
backend/test_files/control_flow/: for_loops.finn  if_elif_else.finn  if_simple.finn  while_simple.finn
backend/test_files/edge_cases/: control_flow.finn  numbers.finn  strings.finn
backend/test_files/expressions/: arithmetic.finn  boolean.finn  strings.finn
backend/test_files/functions/: nested.finn  parameters.finn  return_values.finn  simple.finn
backend/test_files/legacy/: test_all_features.finn  test_final.finn  test_for.finn  test_for_simple.finn  test_func_simple.finn  test_functions.finn
finnlang-sandbox/: index.html  package-lock.json  package.json  vite.config.js
finnlang-sandbox/src/: App.css  App.jsx  index.css
finnlang-sandbox/src/styles/: buttons.css
